--- a/css/styles.css
+++ b/css/styles.css
@@ -7,3 +7,8 @@
   .section-header h1{
     text-align: center;
   }
+body{
+  /* background-image: url('../images/body.jpg'); */
+  background-size: auto;
+  background-attachment: fixed;
+}
