--- a/css/styles.css
+++ b/css/styles.css
@@ -1,14 +1,37 @@
-  .section-header {
-    height: 200px;
-    color: black;
-    font-weight: bold;
-    background-color: #FFA07A;
-  }
-  .section-header h1{
-    text-align: center;
-  }
-body{
-  /* background-image: url('../images/body.jpg'); */
-  background-size: auto;
-  background-attachment: fixed;
+.jumbotron {
+  text-align: center;
+  font-weight: bolder;
+  background-color: #FFA07A;
+  margin-left: -10%;
+  margin-right: -10%;
+}
+
+.col-md-4 {
+  background-color: #008080;
+  padding: 40px;
+  margin-left: -7%;
+  margin-top: -30px;
+  border: 2px solid rgba(211, 211, 211, 0.44);
+  box-shadow: 2px 2px 7px 2px rgba(0, 0, 0, 0.14);
+}
+
+.row h2 {
+  font-weight: bold;
+}
+
+.row h4 {
+  color: #E9967A;
+}
+
+button {
+  background-color: #454545;
+  color: #FFA07A;
+}
+
+button:hover {
+  opacity: 0.7;
+}
+
+#output {
+  font-style: italic;
 }
